--- a/assign4-remake/blog.css
+++ b/assign4-remake/blog.css
@@ -171,6 +171,13 @@ ul{
 	list-style-type: none;
 }
 
+.error{
+  color: red;
+}
+
+.sent{
+  color: green;
+}
 
 /******************************************************/
 
